jdk21升级适配